# grpc-windows

./: CMakeLists.txt  README.md  build-debug-proj-mt.bat  build-win32.bat  build-win64.bat  hello.cc  libgrpc++.cmake  libgrpc++_unsecure.cmake  libgrpc.cmake  libgrpc_plugin_support.cmake  libgrpc_unsecure.cmake
examples/helloworld/: Makefile
grpc/: CMakeLists.txt  hello.cc  libgrpc++.cmake  libgrpc++_unsecure.cmake  libgrpc.cmake  libgrpc_plugin_support.cmake  libgrpc_unsecure.cmake
grpc/examples/helloworld/: Makefile  helloworld.grpc.pb.cc
grpc/grpc-release-0_13_0/src/csharp/: Grpc.sln
grpc/grpc-release-0_13_0/templates/vsprojects/: protoc.props.template
msvc/: stdbool.h
